fix text overflow on login and registration

--- a/front-end/styles/registration.css
+++ b/front-end/styles/registration.css
@@ -42,8 +42,12 @@ body {
 }
 
 .login-container {
+  display: flex;
+  flex-direction: column;
   width: 50vw;
-  height: 100vh;
+  min-height: 100vh;
+  min-width: fit-content;
+  /* height: 100%; */
   flex-shrink: 0;
   background: linear-gradient(
     180deg,
@@ -71,7 +75,7 @@ body {
   padding: 10px;
   padding-left: 12px;
   font-weight: 400;
-  width: 100%;
+  min-width: 100%;
   transition: 0.2s;
 }
 
@@ -126,7 +130,7 @@ body {
 
 #login-message {
   color: rgba(255, 255, 255, 0.83);
-  margin-top: 2rem;
+  margin: 2rem 0 4rem 0;
 }
 
 #login-link {
